force-app/main/default/objects/skilljar__Path_Progress__c/fields/skilljar__Contact__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Contact__c</fullName>
    <deleteConstraint>SetNull</deleteConstraint>
    <label>Contact</label>
    <referenceTo>Contact</referenceTo>
    <relationshipName>Student_Path_Progresses</relationshipName>
    <type>Lookup</type>
</CustomField>