force-app/main/default/objects/skilljar__Path_Progress__c/fields/skilljar__Enrolled_At__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Enrolled_At__c</fullName>
    <label>Enrolled At</label>
    <type>DateTime</type>
</CustomField>