force-app/main/default/objects/skilljar__Path_Progress__c/fields/skilljar__Path__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Path__c</fullName>
    <label>Path</label>
    <referenceTo>skilljar__Path__c</referenceTo>
    <relationshipName>Student_Path_Progresses</relationshipName>
    <relationshipOrder>0</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>