force-app/main/default/objects/skilljar__Path_Progress__c/fields/skilljar__Student__c.field-meta.xml
<CustomField>
    <fullName>skilljar__Student__c</fullName>
    <label>Student</label>
    <referenceTo>skilljar__Student__c</referenceTo>
    <relationshipName>Student_Path_Progresses</relationshipName>
    <relationshipOrder>1</relationshipOrder>
    <type>MasterDetail</type>
</CustomField>